--- a/src/main/resources/theme/play/ranked_1v1.fxml
+++ b/src/main/resources/theme/play/ranked_1v1.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import com.jfoenix.controls.JFXProgressBar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import java.lang.String?>
 <ScrollPane xmlns:fx="http://javafx.com/fxml/1" fx:id="ladder1v1Root" fitToWidth="true"
             maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
             xmlns="http://javafx.com/javafx/8.0.141"
@@ -107,8 +106,8 @@
                   <children>
                       <Label styleClass="h2" text="%ranked1v1.rating.title" />
                       <Label fx:id="ratingLabel" prefHeight="80.0" styleClass="h1" text="0000" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                      <JFXProgressBar fx:id="ratingProgressIndicator" prefWidth="244.0" progress="0.66"
-                                      GridPane.rowIndex="2"/>
+                      <ProgressBar fx:id="ratingProgressIndicator" prefWidth="244.0" progress="0.66"
+                                   GridPane.rowIndex="2"/>
                       <Label fx:id="ratingHintLabel" text="&lt;rating hint&gt;" wrapText="true" GridPane.rowIndex="1" />
                   </children>
                       <padding>
