--- a/src/main/resources/theme/vault/map/map_detail.fxml
+++ b/src/main/resources/theme/vault/map/map_detail.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXProgressBar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
@@ -93,8 +93,8 @@
                                       <VBox fx:id="loadingContainer" alignment="TOP_RIGHT" maxWidth="300.0">
                                           <children>
                                               <Label fx:id="progressLabel"/>
-                                              <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
-                                                              progress="0.0"/>
+                                              <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
+                                                           progress="0.0"/>
                                           </children>
                                       </VBox>
                                   </VBox>
