--- a/src/main/resources/theme/vault/mod/mod_detail.fxml
+++ b/src/main/resources/theme/vault/mod/mod_detail.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXProgressBar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
@@ -43,8 +43,8 @@
                                               GridPane.rowIndex="1">
                                             <children>
                                                 <Label fx:id="progressLabel" text=""/>
-                                                <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
-                                                                progress="0.0"/>
+                                                <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
+                                                             progress="0.0"/>
                                             </children>
                                         </VBox>
                                         <Button fx:id="uninstallButton" mnemonicParsing="false"
