--- a/src/main/resources/theme/chat/chat_user_context_menu.fxml
+++ b/src/main/resources/theme/chat/chat_user_context_menu.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXColorPicker?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.CustomMenuItem?>
@@ -22,7 +22,7 @@
         <content>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                 <children>
-                    <JFXColorPicker fx:id="colorPicker" HBox.hgrow="ALWAYS"/>
+                    <ColorPicker fx:id="colorPicker" HBox.hgrow="ALWAYS"/>
                     <Button fx:id="removeCustomColorButton" onAction="#onRemoveCustomColor" styleClass="icon,small"
                                text="" HBox.hgrow="NEVER"/>
                 </children>
