--- a/src/main/resources/theme/tournaments/tournaments.fxml
+++ b/src/main/resources/theme/tournaments/tournaments.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -12,7 +12,7 @@
    <children>
         <VBox fx:id="loadingIndicator" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <JFXSpinner prefHeight="80.0" prefWidth="80.0" />
+                <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
                 <Label text="%loading">
                     <VBox.margin>
                         <Insets bottom="28.0" top="14.0" />
