--- a/src/main/resources/theme/news.fxml
+++ b/src/main/resources/theme/news.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.web.WebView?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.web.WebView?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="newsRoot" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.news.NewsController">
   <children>
       <WebView fx:id="newsWebView" prefHeight="-1.0" prefWidth="-1.0"/>
       <Label fx:id="loadingIndicator" contentDisplay="TOP" text="%loading" HBox.hgrow="ALWAYS">
           <graphic>
-              <JFXSpinner maxHeight="80.0" maxWidth="80.0"/>
+              <ProgressIndicator maxHeight="80.0" maxWidth="80.0"/>
           </graphic>
       </Label>
   </children>
