--- a/src/main/resources/theme/statusbar/status_bar.fxml
+++ b/src/main/resources/theme/statusbar/status_bar.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -19,7 +19,8 @@
                 <Pane HBox.hgrow="SOMETIMES" />
                 <Label fx:id="taskProgressLabel" prefWidth="480.0" text="Label">
                     <graphic>
-                        <JFXSpinner maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" />
+                        <ProgressIndicator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                           prefHeight="20.0"/>
                     </graphic>
                 </Label>
                 <ProgressBar fx:id="taskProgressBar" minWidth="80.0" prefWidth="160.0"/>
