--- a/src/main/resources/theme/vault/mod/mod_upload.fxml
+++ b/src/main/resources/theme/vault/mod/mod_upload.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -71,7 +71,7 @@
       <children>
         <Label contentDisplay="TOP" styleClass="h2" text="%mapVault.upload.reading">
           <graphic>
-              <JFXSpinner prefHeight="100.0" prefWidth="100.0" />
+              <ProgressIndicator prefHeight="100.0" prefWidth="100.0"/>
           </graphic>
         </Label>
       </children>
