--- a/src/main/resources/theme/vault/vault_entity.fxml
+++ b/src/main/resources/theme/vault/vault_entity.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.BorderPane?>
@@ -62,7 +62,7 @@
                   maxWidth="1.7976931348623157E308" mouseTransparent="true" spacing="10.0">
                 <Label contentDisplay="TOP" text="%vault.loading">
                     <graphic>
-                        <JFXSpinner/>
+                        <ProgressIndicator/>
                     </graphic>
                 </Label>
                 <VBox/>
