Only highlight tab on new messages

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -44,7 +44,7 @@
                               </toggleGroup>
                           </ToggleButton>
                           <ToggleButton fx:id="chatButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onChat" styleClass="main-navigation-button" text="%main.chat" toggleGroup="$mainNavigation" />
-                          <ToggleButton fx:id="playButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNavigateButtonClicked" styleClass="main-navigation-button" text="%main.play" toggleGroup="$mainNavigation" />
+                          <ToggleButton fx:id="playButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onPlay" styleClass="main-navigation-button" text="%main.play" toggleGroup="$mainNavigation" />
                           <ToggleButton fx:id="vaultButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNavigateButtonClicked" styleClass="main-navigation-button" text="%main.vault" toggleGroup="$mainNavigation" />
                           <ToggleButton fx:id="leaderboardsButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNavigateButtonClicked" styleClass="main-navigation-button" text="%main.leaderboards" toggleGroup="$mainNavigation" />
                           <ToggleButton fx:id="tournamentsButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNavigateButtonClicked" styleClass="main-navigation-button" text="%main.tournaments" toggleGroup="$mainNavigation" />
