--- a/src/main/resources/theme/vault/mod/mod_upload.fxml
+++ b/src/main/resources/theme/vault/mod/mod_upload.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -46,25 +47,37 @@
               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
-          <children>
-              <Label text="%modVault.upload.modVersion" />
-              <Label text="%modVault.upload.modUid" GridPane.rowIndex="1" />
-              <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;Version&gt;" GridPane.columnIndex="1" />
-              <Label fx:id="uidLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;UID&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          </children>
-          <VBox.margin>
-              <Insets top="10.0" />
-          </VBox.margin>
+            <children>
+                <Label text="%modVault.upload.modVersion"/>
+                <Label text="%modVault.upload.modUid" GridPane.rowIndex="1"/>
+                <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
+                       text="&lt;Version&gt;" GridPane.columnIndex="1"/>
+                <Label fx:id="uidLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;UID&gt;"
+                       GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            </children>
+            <VBox.margin>
+                <Insets top="10.0"/>
+            </VBox.margin>
         </GridPane>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0">
-          <buttons>
-              <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked" text="%modVault.upload.uploadNow" />
-              <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel" />
-          </buttons>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-        </ButtonBar>
+          <Label fx:id="rulesLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                 text="%modVault.upload.rules" wrapText="true">
+              <graphic>
+                  <CheckBox fx:id="rulesCheckBox" mnemonicParsing="false"/>
+              </graphic>
+          </Label>
+          <HBox spacing="10.0">
+              <Button text="%mapVault.upload.openRules" onMouseClicked="#onShowRulesClicked"/>
+          </HBox>
+          <ButtonBar prefHeight="40.0" prefWidth="200.0">
+              <buttons>
+                  <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
+                          text="%modVault.upload.uploadNow"/>
+                  <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel"/>
+              </buttons>
+              <VBox.margin>
+                  <Insets top="10.0"/>
+              </VBox.margin>
+          </ButtonBar>
       </children>
     </VBox>
       <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
