--- a/src/main/resources/theme/vault/review/review.fxml
+++ b/src/main/resources/theme/vault/review/review.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
@@ -10,10 +9,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.layout.Region?>
 <VBox fx:id="ownReviewRoot" maxHeight="1.7976931348623157E308" minWidth="100.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.vault.review.ReviewController">
     <children>
         <GridPane fx:id="displayReviewPane" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="100" vgap="5.0" VBox.vgrow="ALWAYS">
@@ -36,6 +34,8 @@
                         <fx:include fx:id="displayStars" source="stars.fxml" />
                     </children>
                 </HBox>
+                <Label fx:id="versionLabel" styleClass="h3" GridPane.columnIndex="1" GridPane.rowIndex="2"
+                       GridPane.valignment="TOP"/>
                 <Label fx:id="reviewTextLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Long texts should be wrapped but as it turns out, this is not too easy to do. The final problem was that the minimum width of the parents had to be changed from USE_COMPUTED_SIZE to 0 (or just any value that is appropriate)." wrapText="true" GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
                     <padding>
                         <Insets left="15.0" right="15.0" />
