--- a/src/main/resources/theme/vault/map/map_detail.fxml
+++ b/src/main/resources/theme/vault/map/map_detail.fxml
@@ -28,7 +28,7 @@
                   <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
                         spacing="20.0">
                       <children>
-                          <GridPane fx:id="gridPane" hgap="20.0" vgap="20.0">
+                          <GridPane fx:id="gridPane" hgap="20.0" vgap="20.0" maxHeight="1.7976931348623157E308">
                               <columnConstraints>
                                   <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
                                   <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
@@ -44,7 +44,7 @@
                                   <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
                                   <RowConstraints fx:id="hideRow" fillHeight="false"/>
                                   <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
-                                  <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS"/>
+                                  <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
                               </rowConstraints>
                               <children>
                                   <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0"
@@ -113,8 +113,10 @@
                                          GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
                                          GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
                                   <Label fx:id="mapDescriptionLabel" maxWidth="1.7976931348623157E308" minWidth="0.0"
-                                         text="&lt;Description&gt;" wrapText="true" GridPane.columnIndex="1"
+                                         text="&lt;Description&gt;" wrapText="true" GridPane.vgrow="ALWAYS"
+                                         GridPane.columnIndex="1"
                                          GridPane.columnSpan="2147483647" GridPane.rowIndex="6"
+                                         maxHeight="1.7976931348623157E308"
                                          GridPane.valignment="TOP"/>
                                   <HBox spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
                                         GridPane.rowIndex="3">
