--- a/src/main/resources/theme/vault/review/review.fxml
+++ b/src/main/resources/theme/vault/review/review.fxml
@@ -27,26 +27,34 @@
                 <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" vgrow="ALWAYS" />
             </rowConstraints>
             <children>
-                <ImageView fx:id="avatarImageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2147483647" GridPane.valignment="TOP" />
-                <Label fx:id="usernameLabel" styleClass="h3" text="&lt;Username&gt;" GridPane.columnIndex="1" GridPane.valignment="TOP" />
-                <HBox styleClass="medium-stars" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                <ImageView fx:id="avatarImageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true"
+                           preserveRatio="true" GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
+                <Label fx:id="usernameLabel" styleClass="h3" text="&lt;Username&gt;" GridPane.columnIndex="1"
+                       GridPane.valignment="TOP"/>
+                <HBox styleClass="medium-stars" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                      GridPane.valignment="TOP">
                     <children>
-                        <fx:include fx:id="displayStars" source="stars.fxml" />
+                        <fx:include fx:id="displayStars" source="stars.fxml"/>
                     </children>
                 </HBox>
                 <Label fx:id="versionLabel" styleClass="h3" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                       GridPane.valignment="TOP"/>
-                <Label fx:id="reviewTextLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Long texts should be wrapped but as it turns out, this is not too easy to do. The final problem was that the minimum width of the parents had to be changed from USE_COMPUTED_SIZE to 0 (or just any value that is appropriate)." wrapText="true" GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
+                       GridPane.valignment="TOP" GridPane.vgrow="ALWAYS"/>
+                <Label fx:id="reviewTextLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
+                       maxWidth="1.7976931348623157E308"
+                       text="Long texts should be wrapped but as it turns out, this is not too easy to do. The final problem was that the minimum width of the parents had to be changed from USE_COMPUTED_SIZE to 0 (or just any value that is appropriate)."
+                       wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.rowSpan="2147483647">
                     <padding>
-                        <Insets left="15.0" right="15.0" />
+                        <Insets left="15.0" right="15.0"/>
                     </padding>
                 </Label>
-                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteButtonClicked" GridPane.columnIndex="3" GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
+                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteButtonClicked"
+                        GridPane.columnIndex="3" GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
                     <graphic>
                         <Region styleClass="icon,delete-icon"/>
                     </graphic>
                 </Button>
-                <Button fx:id="editButton" mnemonicParsing="false" onAction="#onEditButtonClicked" GridPane.columnIndex="4" GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
+                <Button fx:id="editButton" mnemonicParsing="false" onAction="#onEditButtonClicked"
+                        GridPane.columnIndex="4" GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
                     <graphic>
                         <Region styleClass="icon,edit-icon"/>
                     </graphic>
