--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_invite_player.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_invite_player.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXListView?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="com.faforever.client.teammatchmaking.InvitePlayerController"
@@ -16,8 +15,8 @@
 
     <children>
         <HBox spacing="20">
-            <JFXTextField fx:id="playerTextField" HBox.hgrow="ALWAYS" onAction="#onInviteButtonClicked"/>
-            <JFXButton text="%teammatchmaking.invite" onAction="#onInviteButtonClicked"/>
+            <TextField fx:id="playerTextField" HBox.hgrow="ALWAYS" onAction="#onInviteButtonClicked"/>
+            <Button text="%teammatchmaking.invite" onAction="#onInviteButtonClicked"/>
         </HBox>
         <StackPane alignment="TOP_LEFT">
             <VBox spacing="20">
@@ -27,7 +26,7 @@
                     <Insets top="20.0" />
                 </padding>
             </VBox>
-            <JFXListView fx:id="playersListView" styleClass="party-player-invite-list-view" onKeyPressed="#onKeyPressed"/>
+            <ListView fx:id="playersListView" styleClass="party-player-invite-list-view" onKeyPressed="#onKeyPressed"/>
         </StackPane>
     </children>
 
