--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
@@ -23,11 +23,11 @@
         </padding>
     </FlowPane>
     <Label fx:id="matchFoundLabel" style="-fx-font-weight: bold;-fx-text-fill: #83be15"
-           text="%teammatchmaking.match.found" managed="false"/>
+           text="%teammatchmaking.match.found" visible="false"/>
     <Label fx:id="matchStartingLabel" style="-fx-font-weight: bold;-fx-text-fill: #83be15"
-           text="%teammatchmaking.match.starting" managed="false"/>
+           text="%teammatchmaking.match.starting" visible="false"/>
     <Label fx:id="matchCancelledLabel" style="-fx-font-weight: bold;-fx-text-fill: #be6800"
-           text="%teammatchmaking.match.cancelled" managed="false"/>
+           text="%teammatchmaking.match.cancelled" visible="false"/>
     <Label fx:id="refreshingLabel" visible="false" >
         <graphic>
             <Region styleClass="icon, refresh-icon" />
