--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -144,7 +144,7 @@
                 </padding>
             </VBox>
         </ScrollPane>
-        <TabPane fx:id="chatTabPane" styleClass="chat-tab-pane"
+        <TabPane fx:id="chatTabPane" styleClass="chat-tab-pane" tabClosingPolicy="UNAVAILABLE"
                  GridPane.columnIndex="1" GridPane.fillWidth="true" GridPane.rowSpan="2" />
     </GridPane>
 </StackPane>
