--- a/src/main/resources/theme/leaderboard/leaderboards.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboards.fxml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-
-<TabPane xmlns:fx="http://javafx.com/fxml/1" fx:id="leaderboardRoot"
-         tabClosingPolicy="UNAVAILABLE"
-         xmlns="http://javafx.com/javafx/8.0.60"
-         fx:controller="com.faforever.client.leaderboard.LeaderboardsController">
-    <tabs>
-        <Tab fx:id="ladder1v1LeaderboardTab" text="%leaderboard.ranked1v1">
-            <fx:include fx:id="ladder1v1Leaderboard" source="leaderboard.fxml"/>
-        </Tab>
-        <Tab fx:id="globalLeaderboardTab" text="%leaderboard.global">
-            <fx:include fx:id="globalLeaderboard" source="leaderboard.fxml"/>
-        </Tab>
-    </tabs>
-</TabPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.60"
+      fx:controller="com.faforever.client.leaderboard.LeaderboardsController">
+    <Separator minHeight="10.0"/>
+    <HBox alignment="CENTER_LEFT" spacing="10.0">
+        <ComboBox fx:id="leaderboardComboBox" onAction="#onLeaderboardSelected"/>
+        <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308">
+            <graphic>
+                <Region styleClass="icon,search-icon"/>
+            </graphic>
+        </Label>
+        <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308"
+                   promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS"/>
+    </HBox>
+    <VBox fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0"
+          VBox.vgrow="ALWAYS" visible="false">
+        <children>
+            <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                       minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn fx:id="rankColumn" text="Rank"/>
+                    <TableColumn fx:id="nameColumn" text="Name"/>
+                    <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false"/>
+                    <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
+                    <TableColumn fx:id="ratingColumn" text="Rating"/>
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+            </TableView>
+        </children>
+        <padding>
+            <Insets top="10.0"/>
+        </padding>
+    </VBox>
+    <VBox fx:id="connectionProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
+          maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+        <children>
+            <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
+            <Label text="%leaderboard.loading">
+                <VBox.margin>
+                    <Insets/>
+                </VBox.margin>
+            </Label>
+        </children>
+    </VBox>
+</VBox>
