--- a/src/main/resources/theme/user_info_window.fxml
+++ b/src/main/resources/theme/user_info_window.fxml
@@ -46,75 +46,51 @@
               <content>
                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                   <children>
-                    <GridPane hgap="10.0" vgap="10.0" VBox.vgrow="ALWAYS">
-                      <columnConstraints>
-                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                      </columnConstraints>
-                      <rowConstraints>
-                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                          <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                      </rowConstraints>
-                      <children>
-                        <GridPane prefWidth="250.0" styleClass="card">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="NEVER" />
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <children>
-                              <Label styleClass="h2" text="%ranked1v1.gamesPlayed" />
-                              <Label fx:id="gamesPlayedLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="80.0" styleClass="h1" text="000" GridPane.rowIndex="1" />
-                          </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </GridPane>
-                        <GridPane prefWidth="250.0" styleClass="card" GridPane.columnIndex="1">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="NEVER" />
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <children>
-                              <Label styleClass="h2" text="%userInfo.ratingGlobal" />
-                              <Label fx:id="ratingLabelGlobal" prefHeight="80.0" styleClass="h1" text="0000" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                          </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </GridPane>
-                        <GridPane prefWidth="250.0" styleClass="card" GridPane.columnIndex="2">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="NEVER" />
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <children>
-                              <Label styleClass="h2" text="%userInfo.rating1v1" />
-                              <Label fx:id="ratingLabel1v1" prefHeight="80.0" styleClass="h1" text="0000" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                          </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </GridPane>
-                        <VBox styleClass="card" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
-                          <padding>
-                            <Insets right="15.0" />
-                          </padding>
-                          <children>
-                            <HBox alignment="CENTER_RIGHT" spacing="10.0">
-                              <padding>
-                                <Insets top="10.0" />
-                              </padding>
-                              <children>
+                    <GridPane hgap="10.0" vgap="10.0" VBox.vgrow="ALWAYS" alignment="CENTER">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                        </rowConstraints>
+                        <children>
+                            <GridPane prefWidth="250.0" styleClass="card">
+                                <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                </columnConstraints>
+                                <rowConstraints>
+                                    <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+                                    <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                                </rowConstraints>
+                                <children>
+                                    <Label styleClass="h2" text="%userInfo.gamesPlayed"/>
+                                    <Label fx:id="gamesPlayedLabel" alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                           prefHeight="80.0" styleClass="h1" text="000" GridPane.rowIndex="1"/>
+                                </children>
+                                <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                </padding>
+                            </GridPane>
+                            <HBox fx:id="ratingsBox" styleClass="card" GridPane.columnIndex="1"
+                                  GridPane.halignment="CENTER"
+                                  alignment="CENTER" spacing="10.0">
+                                <Label fx:id="ratingsLabels" textAlignment="CENTER" styleClass="h2"
+                                       text="&lt;rating names&gt;"/>
+                                <Label fx:id="ratingsValues" textAlignment="CENTER" maxWidth="1.7976931348623157E308"
+                                       styleClass="h2" text="&lt;rating values&gt;" GridPane.rowIndex="1"/>
+                            </HBox>
+                            <VBox styleClass="card" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                                <padding>
+                                    <Insets right="15.0"/>
+                                </padding>
+                                <children>
+                                    <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                                        <padding>
+                                            <Insets top="10.0"/>
+                                        </padding>
+                                        <children>
                                   <ComboBox fx:id="timePeriodComboBox" onAction="#plotPlayerRatingGraph"/>
                                   <ComboBox fx:id="ratingTypeComboBox" onAction="#onRatingTypeChange"/>
                               </children>
