--- a/src/main/resources/theme/colors.css
+++ b/src/main/resources/theme/colors.css
@@ -28,5 +28,5 @@
   -divider-color: #424242;
   -card-color: #424242CC;
   -dimmer-color: #21212199;
-  -fx-text-color: #ffffff;
+  -fx-text-color: #fff;
 }
