Add discord invite over matchmaker chat

--- a/src/main/resources/theme/colors.css
+++ b/src/main/resources/theme/colors.css
@@ -25,6 +25,8 @@
   REVIEW_SCORE_2: #e9985d;
   REVIEW_SCORE_1: #ae453b;
 
+  DISCORD_COLOR: #7289DA;
+
   -divider-color: #424242;
   -card-color: #424242CC;
   -dimmer-color: #21212199;
