--- a/src/main/resources/theme/user_button.fxml
+++ b/src/main/resources/theme/user_button.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-
 <MenuButton fx:id="userMenuButtonRoot" alignment="CENTER_RIGHT" focusTraversable="false" graphicTextGap="10.0" mnemonicParsing="false" styleClass="user-button" text="&lt;Username&gt;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.main.UserButtonController">
     <items>
         <MenuItem mnemonicParsing="false" onAction="#onShowProfile" text="%userMenu.showProfile" />
+        <MenuItem mnemonicParsing="false" onAction="#onReport" text="%userMenu.moderationReport"/>
         <MenuItem mnemonicParsing="false" onAction="#onLogOut" text="%userMenu.logOut" />
     </items>
 </MenuButton>
